--- a/SqlSugar/数据查询/基础查询.md
+++ b/SqlSugar/数据查询/基础查询.md
@@ -1,5 +1,5 @@
 
-## 此章节用到的表结构和数据
+## 用到的表结构、数据、实体类
 方便测试Demo
 ### Student
 
@@ -24,8 +24,21 @@ INSERT INTO `student` VALUES (11, 'qwe', 0);
 INSERT INTO `student` VALUES (12, 'qwe', 0);
 ```
 
-## 1.查所有
+```csharp
+public class Student
+    {
+        [SugarColumn(IsPrimaryKey = true, IsIdentity = true)]
+        public int StudentId { get; set; }
+        public string Name { get; set; }
+        public int SchoolId { get; set; }
+
+        [Navigate(NavigateType.OneToOne, nameof(SchoolId))]//一对一 SchoolId是Student类里面的
+        public School School { get; set; } //不能赋值
+    }
 ```
+
+## 1.查所有
+```csharp
 List<Student> list = db.Queryable<Student>().ToList();
 
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student`
@@ -33,14 +46,14 @@ List<Student> list = db.Queryable<Student>().ToList();
 
 
 ## 2.按条件查询
-```
+```csharp
 List<Student> list = db.Queryable<Student>().Where(it=> it.Id.Equals("1")).ToList();
 
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `student`  WHERE  (`Id` = 1)
 ```
 
 ## 3.多条件查询
-```
+```csharp
 List<Student> list1 = db.Queryable<Student().Where(it => it.SchoolId > 5 && it.Name == "G").ToList();
 
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student`  WHERE (( `SchoolId` > 5 ) AND ( `StudentName` = 'G' ))
@@ -51,7 +64,7 @@ List<Student> list2 = db.Queryable<Student>().Where(it => it.SchoolId > 5).Where
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student`  WHERE ( `SchoolId` > 5 )  AND ( `StudentName` = 'G' )
 ```
 ## 4.动态OR查询
-```
+```csharp
 var exp = Expressionable.Create<Student>();
 exp.OrIF(1==1,it=>it.Id.Equals("3"));
 exp.Or(it => it.Name == "E");
@@ -61,14 +74,14 @@ List<Student> list = db.Queryable<Student().Where(exp.ToExpression()).ToList();
 ```
 
 ## 5.模糊查询
-```
+```csharp
 List<Student> list = db.Queryable<Student>().Where(it=>it.Id.Contains("4")).ToList();
 
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student`  WHERE(`Id` like concat('%', 4, '%'))
 ```
 
 ## 6.根据主键查询
-```
+```csharp
 Student model1 = db.Queryable<Student>().InSingle(5); //通过主键查询
 
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student`  WHERE `Id` = '5'
@@ -82,28 +95,28 @@ Student model2 = db.Queryable<Student>().Single(it => it.Id == 5);
 ## 7.查询第一条   
 First == Linq中的 FirstOrDefault  没有数据返回Null
 
-```
+```csharp
  Student model = db.Queryable<Student>().First(it => it.Id == 1);
  
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student`   WHERE( `Id`= '8')  ORDER BY NOW()  LIMIT 0,1
 ```
 
 ## 8.查前几条
-```
+```csharp
 List<Student> list = db.Queryable<Student>().Take(3).ToList();
 
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student`  LIMIT 0,3
 ```
 
 ## 9.数据行数
-```
+```csharp
 int count = db.Queryable<Student>().Count();
 
 //SELECT Count(*) FROM `Student`
 ```
 
 ## 10.设置新表明
-```
+```csharp
  List<Student> list1 = db.Queryable<Student>().AS("SS").ToList();
  
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `SS`
@@ -114,14 +127,14 @@ List<Student> list2 = db.Queryable<Student>().AS("dbo.Student").ToList();
 ```
 
 ## 11.是否存在记录
-```
+```csharp
  bool b = db.Queryable<Student>().Any(it => it.Id == 9);
  
 //SELECT 1 FROM `Student`  WHERE( `Id` = '9')
 ```
 
 ## 12.IN查询，IN的使用
-```
+```csharp
 int[] nums = new int[3] { 1, 3, 5 };
 List<Student> list = db.Queryable<Student>().Where(it => nums.Contains(it.Id)).ToList();
 
@@ -140,7 +153,7 @@ List<Student> list = db.Queryable<Student>().Where(exp.ToExpression()).ToList();
 ```
 
 ## 13.NOT IN
-```
+```csharp
 int[] nums = new int[3] { 1, 3, 5 };
 List<Student> list = db.Queryable<Student>().Where(it => !nums.Contains(it.Id)).ToList();
 
@@ -148,41 +161,41 @@ List<Student> list = db.Queryable<Student>().Where(it => !nums.Contains(it.Id)).
 ```
 
 ## 14.简单排序
-```
+```csharp
  List<Student> list = db.Queryable<Student>().OrderBy(it => it.Id, OrderByType.Desc).ToList();
  
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student` ORDER BY `Id`DESC
 ```
 
 ## 15.查询一列
-```
+```csharp
 List<string> list = db.Queryable<Student>().Select(it => it.Name).ToList();
 
 //SELECT `StudentName` FROM `Student`
 ```
 
 ## 16.查询单条
-```
+```csharp
 Student cs = db.Queryable<Student>().Single(it => it.Id == 10);
 
 //SELECT `Id`,`SchoolId`,`StudentName` FROM `Student`  WHERE( `Id` = '10')
 ```
 ## 17.获取最大值
-```
+```csharp
 int cs = db.Queryable<Student>().Max(it => it.Id);
 
 //SELECT MAX(`Id`) FROM `Student`
 ```
 
 ## 18.获取最小值
-```
+```csharp
  int cs = db.Queryable<Student>().Min(it => it.Id);
  
 //SELECT MIN(`Id`) FROM `Student`
 ```
 
 ## 19.求和
-```
+```csharp
 int cs = db.Queryable<Student>().Sum(it => it.Id);
 
 //SELECT SUM(`Id`) FROM `Student`
@@ -190,7 +203,7 @@ int cs = db.Queryable<Student>().Sum(it => it.Id);
 
 ## 20.查询过滤某一个字段 
 仅支持单表查询
-```
+```csharp
 List<Student> list = db.Queryable<Student>().IgnoreColumns(it=>it.Name).ToList();
 
 //SELECT `Id`,`SchoolId` FROM `Student`
@@ -207,7 +220,7 @@ List<Student> list = db.Queryable<Student>().IgnoreColumns(it=>it.Name).ToList()
     <td style="border:none;width:300px"><a style="color:var(--sidebarSublink);font-size:18px;" > 目录导航 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/数据查询/基础查询?id=此章节用到的表结构和数据" > 此章节用到的表结构和数据 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/数据查询/基础查询?id=用到的表结构、数据、实体类" > 用到的表结构、数据、实体类 </a></td>
     </tr>
     <tr style="border:none;">
     <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/数据查询/基础查询?id=student" > &emsp;Student </a></td>
